[package]
name = "sadb"
version = "0.1.0"
edition = "2021"
authors = ["sethispr"]
description = "silent assassin tui for searching skins, checking values, and finding owners"
repository = "https://github.com/sethispr/sadb"
license = "MIT"
keywords = ["ratatui", "tui", "serde", "roblox", "fuzzy-matching", "crossterm", "rust"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.23.0"
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fuzzy-matcher = "0.3.7"
