[package]
name = "pola"
version = "0.1.3"
edition = "2021"
authors = ["sethispr"]
readme = "README.md"
homepage = "https://sethispr.github.io/pola"
repository = "https://github.com/sethispr/pola"
description = "Silent Assassin TUI for searching skins, checking values, and finding owners!"
keywords = ["ratatui", "tui", "terminal", "serde", "roblox"]
categories = ["command-line-interface"]
license = "MIT"

[dependencies]
ratatui = "0.23.0"
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fuzzy-matcher = "0.3.7"

[profile.release]
opt-level = 's'
strip = true
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[[bin]]
name = "pola"
path = "src/main.rs"
